# LineMarkerRegistration

./: CMakeLists.txt  LineMarkerRegistration.cxx  LineMarkerRegistration.xml  MarkerRegistration.cxx  MarkerRegistration.xml  README.md  itkEuclideanDistanceLineMetric.h  itkEuclideanDistanceLineMetric.txx  itkLabelToLineImageFilter.h  itkLabelToLineImageFilter.txx  itkLabelToNeedleImageFilter.h  itkLabelToNeedleImageFilter.txx
LineMarkerRegistration/: CMakeLists.txt  LineMarkerRegistration.cxx  SampleConfigFile.csv  itkEuclideanDistanceLineMetric.h  itkEuclideanDistanceLineMetric.txx  itkLabelToLineImageFilter.h  itkLabelToLineImageFilter.txx
